--- a/KMOsoft_Android_Tablet/KMOsoft_Android_Tablet.csproj
+++ b/KMOsoft_Android_Tablet/KMOsoft_Android_Tablet.csproj
@@ -66,7 +66,7 @@
     <AndroidResource Include="Resources\layout\LeveringOverzicht.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\drawable\layout1.axml">
+    <AndroidResource Include="Resources\drawable\MainScreenBtn.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
